repair font size toRem function and set correct spacings in under banner section

--- a/assets/scss/partials/_functions.scss
+++ b/assets/scss/partials/_functions.scss
@@ -1,5 +1,5 @@
 @use 'sass:math';
 
-@function toRem($size, $base: 14px){
+@function toRem($size, $base: 16px){
     @return math.div($size, $base) * 1rem;
 }
